--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 :root{
-  --mainBlue:#25797c;
-  --lightBlue:#32787a;
+  --mainBlue:#111414;
+  --lightBlue:#293131;
   --mainWhite:#f3f3f3;
   --mainDark:#464545;
   --mainYellow:#ffa400;
