--- a/src/components/Nav/Toolbar/Toolbar.css
+++ b/src/components/Nav/Toolbar/Toolbar.css
@@ -6,7 +6,7 @@
  width: 100%;
  /* background: #542434; */
  height: 56px;
- background-color: #25797c;
+ background-color: var(--mainBlue);
 }
 
 .toolbar_navigation{
@@ -32,7 +32,7 @@
 }
 
 .toolbar_logo a {
-    color: rgb(24, 22, 22);
+    color: var(--mainDark);
     text-decoration: none;
     font-size: 1.5rem;
 }
